--- a/www/index.html
+++ b/www/index.html
@@ -1011,10 +1011,10 @@
                                                     <input type="text" class="form-control" name="landmark">
                                                     <label class="form-control-label">LandMark</label>
                                                 </div>
-                                                <div class="form-group float-label">
+                                               <!--  <div class="form-group float-label">
                                                     <input type="text" class="form-control" name="gst_no">
                                                     <label class="form-control-label">GST Number</label>
-                                                </div>
+                                                </div> -->
                                                 <div class="form-group float-label">
                                                     <input type="text" class="form-control" name="map_url">
                                                     <label class="form-control-label">Map URL</label>
@@ -1042,7 +1042,7 @@
                                                     
                                                     <input type="hidden" class="form-control rating_value" name="rating">
                                                 </div>
-                                                <div class="form-group float-label">
+                                             <!--    <div class="form-group float-label">
                                                     <input type="text" class="form-control" name="user_login">
                                                     <label class="form-control-label">Username</label>
                                                 </div>
@@ -1051,7 +1051,7 @@
                                                     <span class="show-password1 material-icons"> visibility </span>
                                                     <input type="password" class="form-control" name="user_pass">
                                                     <label class="form-control-label">User password</label>
-                                                </div>
+                                                </div> -->
 
                                                 <div class="category_percenteage_prepopulate">
                                                    
